@@ -249,10 +249,10 @@ void *Expr(void *argument)
       tsID++;
     }
 
-  vlistDestroy(vlistID2);
-
   streamClose(streamID2);
   streamClose(streamID1);
+
+  vlistDestroy(vlistID2);
 
   if ( array ) free(array);
 
